samples/_failures_safe/1761320352_3bc1df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8f885711.c: In function ‘read_operator’:
./samples/SAFE/__tmp_8f885711.c:164:43: error: expected ‘;’ at end of input
  164 |         token->value[len++] = state->input
      |                                           ^
      |                                           ;
./samples/SAFE/__tmp_8f885711.c:164:9: error: expected declaration or statement at end of input
  164 |         token->value[len++] = state->input
      |         ^~~~~
./samples/SAFE/__tmp_8f885711.c:164:9: error: expected declaration or statement at end of input
